Add dummy Kafka event producer service